--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,27 +1,31 @@
-@import url('//fonts.googleapis.com/css?family=Lato:700');
+@import 'variables';
+@import 'global/body';
+@import 'global/header';
 
-body {
-  margin:0;
-  font-family:'Lato', sans-serif;
-  text-align:center;
-  color: #999;
+section.spotlight {
+  background: url('/img/home/spotlight.jpg') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  position: relative;
+  margin: 0 0 30px;
 
-  .welcome {
-    width: 300px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -150px;
-    margin-top: -100px;
+  h4 {
+    color: white;
+    padding: 200px 0 0;
+    text-align: center;
+    font: 400 38px/1.5 $font-serif;
   }
+}
 
-  a, a:visited {
-    text-decoration:none;
-  }
+.about-area {
+  padding: 40px 0;
 
-  h1 {
-    font-size: 32px;
-    margin: 16px 0 0 0;
+  p {
+    text-align: center;
+    font: 400 20px/1.5 $font-serif;
+    color: #555;
+    max-width: 500px;
+    margin: 0 auto;
   }
 }
