--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 @import 'global/body';
 @import 'global/header';
+@import 'global/footer';
+@import 'products';
 
 section.spotlight {
   background: url('/img/home/spotlight.jpg') no-repeat;
@@ -9,6 +11,7 @@ section.spotlight {
   height: 500px;
   position: relative;
   margin: 0 0 30px;
+  padding: 0 30px;
 
   h4 {
     color: white;
@@ -19,7 +22,7 @@ section.spotlight {
 }
 
 .about-area {
-  padding: 40px 0;
+  padding: 40px 0 70px;
 
   p {
     text-align: center;
