Brand colors http://www.colourlovers.com/palette/1/metro

--- a/angularapp/modules/application/views/header.html
+++ b/angularapp/modules/application/views/header.html
@@ -1,7 +1,7 @@
 <header class="global-header">
   <div class="container">
     <div class="col-sm-6 col-md-4">
-      <a href="/">
+      <a ui-sref="index">
         <img src="/img/header/logo.png" width="180" height="40">
       </a>
     </div>
