--- a/assets/sass/global/header.scss
+++ b/assets/sass/global/header.scss
@@ -1,5 +1,6 @@
 header.global-header {
   padding: 10px 0;
+  background: white;
 
   nav {
     ul {
@@ -18,12 +19,12 @@ header.global-header {
         padding: 0 14px;
 
         font: 400 13px/40px $font-sans;
-        color: #999;
+        color: darken($brand-faint-grey, 25%);
         text-transform: uppercase;
 
         &:hover {
           text-decoration: none;
-          color: #444;
+          color: darken($brand-faint-grey, 50%);
         }
       }
 
