--- a/assets/sass/products.scss
+++ b/assets/sass/products.scss
@@ -14,12 +14,12 @@
       margin: 12px 0 5px;
       padding: 0;
       font: 700 15px/1.2 $font-sans;
-      color: #444;
+      color: $brand-grey;
     }
 
     .product-price {
-      color: #777;
-      font: 400 13px/1.2 $font-sans;
+      color: lighten($brand-grey, 20%);
+      font: 300 13px/1.2 $font-sans;
       margin: 0;
     }
 
@@ -31,11 +31,11 @@
       }
 
       .product-title {
-        color: #666;
+        color: lighten($brand-grey, 20%);
       }
 
       .product-price {
-        color: #999;
+        color: lighten($brand-grey, 40%);
       }
     }
   }
