--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -1,2 +1,10 @@
+// Fonts
 $font-sans: 'Open Sans', sans-serif;
+$font-family-sans-serif: $font-sans;
 $font-serif: 'Vollkorn', serif;
+$font-family-serif: $font-serif;
+
+// Colors
+$brand-primary: #00B4FF;
+$brand-grey: #515151;
+$brand-faint-grey: #EEEEEE;
