--- a/angularapp/modules/frontpage/views/index.html
+++ b/angularapp/modules/frontpage/views/index.html
@@ -2,42 +2,50 @@
   <h4>Discover the best tabs for your taste.</h4>
 </section>
 
-<div class="container about-area">
-  <p>
-    Help learn how to play the Acoustic Guitar while learning about great
-    music. Expand your horizons now.
-  </p>
-</div>
+<div class="white-area">
+  <div class="container about-area">
+    <p>
+      Help learn how to play the Acoustic Guitar while learning about great
+      music. Expand your horizons now.
+    </p>
+  </div>
 
-<div class="container">
-  <div class="row product-listing">
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <a href="#" class="product">
-        <img src="http://placekitten.com/400/450">
-        <h4 class="product-title">
-          Tabs for Sale
-        </h4>
-        <h5 class="product-price">$15</h5>
-      </a>
+  <div class="container white-area">
+    <div class="row product-listing">
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <a href="#" class="product">
+          <img src="http://placekitten.com/400/450">
+          <h4 class="product-title">
+            Tabs for Sale
+          </h4>
+          <h5 class="product-price">$15</h5>
+        </a>
+      </div>
+
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <a href="#" class="product">
+          <img src="http://placekitten.com/400/450">
+          <h4 class="product-title">
+            Tabs for Sale
+          </h4>
+          <h5 class="product-price">$15</h5>
+        </a>
+      </div>
+
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <a href="#" class="product">
+          <img src="http://placekitten.com/400/450">
+          <h4 class="product-title">
+            Tabs for Sale
+          </h4>
+          <h5 class="product-price">$15</h5>
+        </a>
+      </div>
     </div>
 
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <a href="#" class="product">
-        <img src="http://placekitten.com/400/450">
-        <h4 class="product-title">
-          Tabs for Sale
-        </h4>
-        <h5 class="product-price">$15</h5>
-      </a>
-    </div>
-
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <a href="#" class="product">
-        <img src="http://placekitten.com/400/450">
-        <h4 class="product-title">
-          Tabs for Sale
-        </h4>
-        <h5 class="product-price">$15</h5>
+    <div class="text-center" style="margin: 40px 0;">
+      <a href="/shop" class="btn btn-primary btn-flat">
+        Enter the Shop
       </a>
     </div>
   </div>
