--- a/assets/sass/global/footer.scss
+++ b/assets/sass/global/footer.scss
@@ -1,11 +1,9 @@
 $footer-color: #f2f2f2;
 
 footer.global-footer {
-  background: $footer-color;
-  padding: 40px 0;
+  padding: 50px 0;
   text-align: center;
-  margin: 30px 0 0;
-  color: darken($footer-color, 20%);
+  color: darken($brand-faint-grey, 25%);
   font-size: 12px;
   text-transform: uppercase;
 
@@ -29,11 +27,11 @@ footer.global-footer {
   a {
     display: inline-block;
     padding: 0 20px;
-    color: darken($footer-color, 20%);
+    color: darken($brand-faint-grey, 25%);
 
     &:hover {
       text-decoration: none;
-      color: darken($footer-color, 40%);
+      color: darken($brand-faint-grey, 40%);
     }
   }
 }
