--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'bootstrap-sass-official/assets/stylesheets/bootstrap';
 @import 'global/body';
 @import 'global/header';
 @import 'global/footer';
@@ -10,19 +11,24 @@ section.spotlight {
   width: 100%;
   height: 500px;
   position: relative;
-  margin: 0 0 30px;
+  margin: 0;
   padding: 0 30px;
 
   h4 {
+    margin: 0;
     color: white;
     padding: 200px 0 0;
     text-align: center;
     font: 400 38px/1.5 $font-serif;
   }
+
+  @media (min-width: 1000px) {
+    height: 800px;
+  }
 }
 
 .about-area {
-  padding: 40px 0 70px;
+  padding: 70px 0;
 
   p {
     text-align: center;
